--- a/.envrc.template
+++ b/.envrc.template
@@ -7,3 +7,6 @@ export ARM_TENANT_ID=
 # Needed to authenticate with Azure DevOps
 export AZDO_ORG_SERVICE_URL=
 export AZDO_PERSONAL_ACCESS_TOKEN=
+
+# Needed to configure the Terraform deployment
+export TF_VAR_prefix=
