--- a/.envrc.template
+++ b/.envrc.template
@@ -10,3 +10,4 @@ export AZDO_PERSONAL_ACCESS_TOKEN=
 
 # Needed to configure the Terraform deployment
 export TF_VAR_prefix=
+export TF_VAR_user_to_invite=
